# loyalty_program

./: .gitignore  Dockerfile  README.md  docker-compose.yml  next.config.js  ngrok.yml  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
anchor/: .env.example  .gitignore  Anchor.toml
anchor/programs/loyalty_pay/: Cargo.toml
anchor/programs/loyalty_pay/src/: constants.rs  errors.rs  lib.rs
anchor/programs/loyalty_pay/src/instructions/: close_loyalty_card.rs  mod.rs  process_payment.rs
anchor/programs/loyalty_pay/src/instructions/utils/: mod.rs  nft_utils.rs
anchor/programs/loyalty_pay/src/state/: loyalty_card.rs  mod.rs
anchor/src/: LoyaltyPay-exports.ts  index.ts
anchor/tests/: LoyaltyPay.spec.ts  utils.ts
frontend/loyalty-dapp/: README.md  ipfs_data.json  log_errors.txt  package-lock.json  package.json  tsconfig.json
frontend/loyalty-dapp/app/: layout.tsx  page.tsx
rust/loyalty_program/: Anchor.toml  package-lock.json
rust/loyalty_program/log_test_errors/: 20_03
rust/loyalty_program/tests/: loyalty_program.ts
src/app/: layout.tsx  page.tsx
src/app/LoyaltyPay/: page.tsx
src/components/LoyaltyPay/: LoyaltyPay-data-access.tsx  LoyaltyPay-feature.tsx  LoyaltyPay-ui.tsx
src/components/account/: account-data-access.tsx  account-detail-feature.tsx  account-list-feature.tsx  account-ui.tsx  customer-account-detail-feature.tsx  merchant-account-detail-feature.tsx
src/components/cluster/: cluster-ui.tsx
src/components/home/: loyalty-pay-home.tsx
src/components/metaplex/: constants.ts  utils.ts  (+1 more)
src/lib/: safe-action.ts
(+29 files in other folders)
